# stock_report_analyzer

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md
.claude/: settings.local.json
backend/: .gitignore  _smoke_test_real_md.py
docs/: architecture.md
frontend/: package-lock.json  package.json
report_analyzer/: CLAUDE.md
report_analyzer/backend/: .env.example  README.md  pyproject.toml
report_analyzer/backend/app/: __init__.py  config.py  deps.py  main.py
report_analyzer/backend/app/models/: company.py  task_event.py
report_analyzer/backend/app/routers/: companies.py
report_analyzer/backend/app/schemas/: company.py  file_tree.py  table_merge.py
report_analyzer/backend/app/services/: annual_report_downloader.py  heading_annotate_service.py  table_merge_service.py  tables_extract_service.py
report_analyzer/backend/app/services/md_table_parser/: __init__.py  text_cleaner.py  title_unit_locator.py
report_analyzer/backend/app/services/mineru_parser/: exceptions.py  heading_level_converter.py  mineru_api_client.py  mineru_online_parser.py  mineru_processor.py
report_analyzer/backend/app/workers/: __init__.py  progress_bus.py  report_pipeline.py  skill_pipeline.py
report_analyzer/backend/docs/: md_table_parser.md
report_analyzer/backend/scripts/: migrate_to_single_tree.py
report_analyzer/backend/tests/: test_parse_split_pipeline.py  test_pdf_split_service.py  test_report_pipeline.py  test_table_merge_pipeline.py  test_table_merge_service.py  test_tasks.py
report_data/: mapping.json
scripts/: parse_split_pdfs.py  split_section3.py
(+523 files in other folders)
